objects/Alliance_OA_Projects__c.object
<CustomObject>
    <fields>
        <fullName>AM_Event__c</fullName>
        <formula>Text(Account_Name__r.AM_Event__c)</formula>
        <label>AM - Event</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Access_Control__c</fullName>
        <label>Access Control</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Account_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account Name</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>Alliance_OA_360_Onboarding</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Actual_Close_Date__c</fullName>
        <label>Actual Close Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Actual_Duration__c</fullName>
        <label>Actual Duration</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Additional_Onsite_Staff__c</fullName>
        <label>Additional Onsite Staff</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Agenda_Integration__c</fullName>
        <label>Agenda Integration</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Corelan</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Allow_to_send_campaigns__c</fullName>
        <label>Allow to send campaigns</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Anticipated_Onsite_time_in_Hours__c</fullName>
        <label>Anticipated Onsite time in Hours</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Application_Device__c</fullName>
        <label>Application + Device #</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Application_Only__c</fullName>
        <label>Application Only #</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Assigned_Onsite_Support_Rep__c</fullName>
        <label>Assigned Onsite Support Rep</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Association_Integration__c</fullName>
        <label>Association Integration</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>RTS</fullName>
                </value>
                <value>
                    <fullName>SXSW</fullName>
                </value>
                <value>
                    <fullName>AllianceTech</fullName>
                </value>
                <value>
                    <fullName>AllianceTech Export</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Attendance_Integration__c</fullName>
        <label>Attendance Integration</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Sforce</fullName>
                </value>
                <value>
                    <fullName>GRP</fullName>
                </value>
                <value>
                    <fullName>Cvent</fullName>
                </value>
                <value>
                    <fullName>Maritz</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Badge_Badge_Holder_Lanyard_Cost1__c</fullName>
        <label>Badge/Badge Holder/Lanyard Cost($)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Badge_Badge_Holder_Lanyard_Cost__c</fullName>
        <label>Badge/Badge Holder/Lanyard Cost</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Badge_Badge_Holder_Lanyard_Revenue1__c</fullName>
        <label>Badge/Badge Holder/Lanyard Revenue($)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Badge_Badge_Holder_Lanyard_Revenue__c</fullName>
        <label>Badge/Badge Holder/Lanyard Revenue</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Badge_Functionality_Needed__c</fullName>
        <label>Badge Functionality Needed</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Conditional Text</fullName>
                </value>
                <value>
                    <fullName>QR Code</fullName>
                </value>
                <value>
                    <fullName>My Agenda Data Tag</fullName>
                </value>
                <value>
                    <fullName>Tickets</fullName>
                </value>
                <value>
                    <fullName>Badge</fullName>
                </value>
                <value>
                    <fullName>Imports</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Badge_Integrations__c</fullName>
        <label>Badge Integrations</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>ATS Encrypted</fullName>
                </value>
                <value>
                    <fullName>CompuSystems</fullName>
                </value>
                <value>
                    <fullName>CDS</fullName>
                </value>
                <value>
                    <fullName>ESC</fullName>
                </value>
                <value>
                    <fullName>Experinet</fullName>
                </value>
                <value>
                    <fullName>Webgs</fullName>
                </value>
                <value>
                    <fullName>Webgs COVR</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Badge_Type_Details__c</fullName>
        <label>Badge Type Details</label>
        <length>1500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Badge_Type__c</fullName>
        <label>Badge Type</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>A6</fullName>
                </value>
                <value>
                    <fullName>Adhesive Thermal Transfer 4x3</fullName>
                </value>
                <value>
                    <fullName>Custom PC Nametag Badges</fullName>
                    <label>Custom Badges</label>
                </value>
                <value>
                    <fullName>Direct Thermal 4 x 3 Double Sided</fullName>
                    <label>Direct Thermal 4*3 Double-Sided</label>
                </value>
                <value>
                    <fullName>Direct Thermal 4 x 3 Single Sided</fullName>
                    <label>Direct Thermal 4*3 Single-Sided</label>
                </value>
                <value>
                    <fullName>Direct Thermal 4x6 Double Sided</fullName>
                    <label>Direct Thermal 4*6 Double-Sided</label>
                </value>
                <value>
                    <fullName>Direct Thermal 4x6 Single Sided</fullName>
                    <label>Direct Thermal 4*6 Single-Sided</label>
                </value>
                <value>
                    <fullName>Direct Thermal 4x12</fullName>
                </value>
                <value>
                    <fullName>Direct Thermal 4 x 3</fullName>
                </value>
                <value>
                    <fullName>Direct Thermal 4x3 Double Sided</fullName>
                </value>
                <value>
                    <fullName>Direct Thermal 4x3 Single Sided</fullName>
                </value>
                <value>
                    <fullName>Direct Thermal 4 x 6</fullName>
                </value>
                <value>
                    <fullName>Direct Thermal 5.5 x 3.5</fullName>
                </value>
                <value>
                    <fullName>Non-RFID Paper  4 x 12</fullName>
                </value>
                <value>
                    <fullName>Non-RFID Paper  4 x 3</fullName>
                </value>
                <value>
                    <fullName>Non-RFID Paper  4 x 6</fullName>
                </value>
                <value>
                    <fullName>Non-Standard Badge Type (Other)</fullName>
                </value>
                <value>
                    <fullName>PVC 2x3</fullName>
                </value>
                <value>
                    <fullName>PVC 3x5</fullName>
                </value>
                <value>
                    <fullName>RFID Paper 4x12</fullName>
                </value>
                <value>
                    <fullName>RFID Paper 4x3</fullName>
                </value>
                <value>
                    <fullName>RFID Paper 4x3 Double Sided</fullName>
                </value>
                <value>
                    <fullName>RFID Paper 4x3 Single Sided</fullName>
                </value>
                <value>
                    <fullName>RFID Paper 4x6</fullName>
                </value>
                <value>
                    <fullName>RFID Paper 4x6 Double Sided</fullName>
                </value>
                <value>
                    <fullName>RFID Paper 4x6 Single Sided</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Badge_Vendor_Used__c</fullName>
        <label>Badge Vendor Used</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Badge_holder_vendor_used__c</fullName>
        <label>Badge holder vendor used</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Barcode_or_Badge_Type__c</fullName>
        <label>Barcode or Badge Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1D</fullName>
                </value>
                <value>
                    <fullName>QR Code</fullName>
                </value>
                <value>
                    <fullName>RFID</fullName>
                </value>
                <value>
                    <fullName>2D (PDF417)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Billed_as_Actuals__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Billed as Actuals</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CE_Tracking__c</fullName>
        <label>CE Tracking</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CRM_Integration__c</fullName>
        <label>CRM Integration</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Eloqua</fullName>
                </value>
                <value>
                    <fullName>EloquaContacts</fullName>
                </value>
                <value>
                    <fullName>File</fullName>
                </value>
                <value>
                    <fullName>FormPost</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Case__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Onsite Solutions Projects</relationshipLabel>
        <relationshipName>Onsite_Solutions_Projects</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Checkin_Integration__c</fullName>
        <label>Checkin Integration</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Sforce</fullName>
                </value>
                <value>
                    <fullName>AllianceTech</fullName>
                </value>
                <value>
                    <fullName>Tableau_Eloqua</fullName>
                </value>
                <value>
                    <fullName>Cvent</fullName>
                </value>
                <value>
                    <fullName>Maritz</fullName>
                </value>
                <value>
                    <fullName>GRP</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Choose2Rent_Booking_Id__c</fullName>
        <label>Choose2Rent Booking Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact name</label>
        <referenceTo>Contact</referenceTo>
        <relationshipName>Alliance_OA_360_Onboarding</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Contractor_Vendor_Used__c</fullName>
        <label>Contractor Vendor Used</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contractor__c</fullName>
        <label>Contractor</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Cvent_Account_ID__c</fullName>
        <formula>Account_Name__r.Cvent_Account_ID__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Cvent Account ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Date_of_First_Read__c</fullName>
        <label>Date of First Read</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_of_Last_Read__c</fullName>
        <label>Date of Last Read</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Days_Onsite__c</fullName>
        <formula>( Onsite_Request_Ends_Date__c -  Onsite_Request_Start_Date__c ) + 1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days Onsite</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Days_since_Last_Activity__c</fullName>
        <formula>TODAY() - LastActivityDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days since Last Activity</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Direct_to_Exhibitor_weblink__c</fullName>
        <label>Direct to Exhibitor weblink</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Discounts__c</fullName>
        <label>Discounts($)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Dont_Time__c</fullName>
        <defaultValue>false</defaultValue>
        <description>For Timer</description>
        <label>Dont Time</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Enrollment_Integration__c</fullName>
        <label>Enrollment Integration</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Corelan</fullName>
                </value>
                <value>
                    <fullName>Sforce</fullName>
                </value>
                <value>
                    <fullName>EventsForce</fullName>
                </value>
                <value>
                    <fullName>Cvent</fullName>
                </value>
                <value>
                    <fullName>Maritz</fullName>
                </value>
                <value>
                    <fullName>Certain</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Estimated_Close_Date__c</fullName>
        <label>Estimated Close Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Estimated_Cost_of_Goods__c</fullName>
        <label>Estimated Cost of Goods %</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Estimated_Duration__c</fullName>
        <label>Estimated Duration</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EventCenter_URL__c</fullName>
        <label>EventCenter URL</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Event_City__c</fullName>
        <label>Event City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Event_Completion_Date__c</fullName>
        <label>Event Completion Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Event_Country__c</fullName>
        <label>Event Country</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Afghanistan</fullName>
                </value>
                <value>
                    <fullName>Aland Islands</fullName>
                </value>
                <value>
                    <fullName>Albania</fullName>
                </value>
                <value>
                    <fullName>Algeria</fullName>
                </value>
                <value>
                    <fullName>American Samoa</fullName>
                </value>
                <value>
                    <fullName>Andorra</fullName>
                </value>
                <value>
                    <fullName>Angola</fullName>
                </value>
                <value>
                    <fullName>Anguilla</fullName>
                </value>
                <value>
                    <fullName>Antarctica</fullName>
                </value>
                <value>
                    <fullName>Antigua and Barbuda</fullName>
                </value>
                <value>
                    <fullName>Argentina</fullName>
                </value>
                <value>
                    <fullName>Armenia</fullName>
                </value>
                <value>
                    <fullName>Aruba</fullName>
                </value>
                <value>
                    <fullName>Australia</fullName>
                </value>
                <value>
                    <fullName>Austria</fullName>
                </value>
                <value>
                    <fullName>Azerbaijan</fullName>
                </value>
                <value>
                    <fullName>Bahamas</fullName>
                </value>
                <value>
                    <fullName>Bahrain</fullName>
                </value>
                <value>
                    <fullName>Bangladesh</fullName>
                </value>
                <value>
                    <fullName>Barbados</fullName>
                </value>
                <value>
                    <fullName>Belarus</fullName>
                </value>
                <value>
                    <fullName>Belgium</fullName>
                </value>
                <value>
                    <fullName>Belize</fullName>
                </value>
                <value>
                    <fullName>Benin</fullName>
                </value>
                <value>
                    <fullName>Bermuda</fullName>
                </value>
                <value>
                    <fullName>Bhutan</fullName>
                </value>
                <value>
                    <fullName>Bolivia</fullName>
                </value>
                <value>
                    <fullName>Bonaire, Saint Eustatius and Saba</fullName>
                </value>
                <value>
                    <fullName>Bosnia and Herzegovina</fullName>
                </value>
                <value>
                    <fullName>Botswana</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Event_Name__c</fullName>
        <label>Event Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Event_Set_Up_Starts__c</fullName>
        <label>Event Set Up Starts</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Event_Start_Date__c</fullName>
        <label>Event Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Event_State__c</fullName>
        <label>Event State</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Event_Tear_Down_Complete__c</fullName>
        <label>Event Tear Down Complete</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Event_Travel_from_Date__c</fullName>
        <label>Event Travel from Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Event_Travel_to_Date__c</fullName>
        <label>Event Travel to Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Event_Venue__c</fullName>
        <label>Event Venue</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Hardware_Cost1__c</fullName>
        <label>Hardware Cost($)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Hardware_Cost__c</fullName>
        <label>Hardware Cost</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Hardware_Revenue1__c</fullName>
        <label>Hardware Revenue($)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Hardware_Revenue__c</fullName>
        <label>Hardware Revenue</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Hardware_Vendor_Used__c</fullName>
        <label>Hardware Vendor Used</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Inquisium_Response_Number__c</fullName>
        <inlineHelpText>Stores the survey response number.</inlineHelpText>
        <label>Inquisium Response Number</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Integration__c</fullName>
        <label>Integration</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Lead_Retrieval_Comment__c</fullName>
        <label>Lead Retrieval Comment</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Leads_Integration__c</fullName>
        <label>Leads Integration</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>SalesForce</fullName>
                </value>
                <value>
                    <fullName>Marketo</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Leads_PM__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Leads PM</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Alliance_OA_360_Projects2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Leads_Total_Revenue__c</fullName>
        <label>Leads Total Revenue</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Level_of_Effort__c</fullName>
        <label>Level of Effort</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Simple</fullName>
                </value>
                <value>
                    <fullName>Standard</fullName>
                </value>
                <value>
                    <fullName>Advanced</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Link_to_JIRA_Epic__c</fullName>
        <label>Link to JIRA Epic</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>List_of_Contractors__c</fullName>
        <label>List of Contractors</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Sikora Kip</fullName>
                </value>
                <value>
                    <fullName>Bouley, Jr.  Kenny</fullName>
                </value>
                <value>
                    <fullName>Bouley Kenneth</fullName>
                </value>
                <value>
                    <fullName>Cartmell Stephen</fullName>
                </value>
                <value>
                    <fullName>Veltri Anastasia</fullName>
                </value>
                <value>
                    <fullName>McStravick Alan</fullName>
                </value>
                <value>
                    <fullName>Palmer Charlie</fullName>
                </value>
                <value>
                    <fullName>Showon Das</fullName>
                </value>
                <value>
                    <fullName>Smith Jason</fullName>
                </value>
                <value>
                    <fullName>Vigo Denis</fullName>
                </value>
                <value>
                    <fullName>DeAnte Godfrey</fullName>
                </value>
                <value>
                    <fullName>Newkirk Edward</fullName>
                </value>
                <value>
                    <fullName>Woodall Hayley</fullName>
                </value>
                <value>
                    <fullName>Griffin Jon</fullName>
                </value>
                <value>
                    <fullName>Edmonds Dan</fullName>
                </value>
                <value>
                    <fullName>Addison Stacie</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Mobile_App__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Mobile App</label>
        <referenceTo>Mobile_Card__c</referenceTo>
        <relationshipLabel>Onsite Solutions Projects</relationshipLabel>
        <relationshipName>Onsite_Solutions_Projects</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Name_of_Contractors__c</fullName>
        <label>Name of Contractors</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Addison Stacie</fullName>
                </value>
                <value>
                    <fullName>Alan McStravick</fullName>
                </value>
                <value>
                    <fullName>Anastasia Veltri</fullName>
                </value>
                <value>
                    <fullName>Anna Gauthry</fullName>
                </value>
                <value>
                    <fullName>Austin Maggs</fullName>
                </value>
                <value>
                    <fullName>Belville Don</fullName>
                </value>
                <value>
                    <fullName>Bouley, Jr. Kenny</fullName>
                </value>
                <value>
                    <fullName>Bouley, Jr.  Kenny</fullName>
                </value>
                <value>
                    <fullName>Bouley Kenneth</fullName>
                </value>
                <value>
                    <fullName>Carol Candeloro</fullName>
                </value>
                <value>
                    <fullName>Cartmell Stephen</fullName>
                </value>
                <value>
                    <fullName>Charlie Palmer</fullName>
                </value>
                <value>
                    <fullName>Corey Rice</fullName>
                </value>
                <value>
                    <fullName>Coyote Freitag</fullName>
                </value>
                <value>
                    <fullName>Craig Michael</fullName>
                </value>
                <value>
                    <fullName>Dan Edmonds</fullName>
                </value>
                <value>
                    <fullName>Daniil Magerov</fullName>
                </value>
                <value>
                    <fullName>David Metzler</fullName>
                </value>
                <value>
                    <fullName>DeAnte Godfrey</fullName>
                </value>
                <value>
                    <fullName>Denis Vigo</fullName>
                </value>
                <value>
                    <fullName>Dominic Vedda</fullName>
                </value>
                <value>
                    <fullName>Edmonds Dan</fullName>
                </value>
                <value>
                    <fullName>Edward Newkirk</fullName>
                </value>
                <value>
                    <fullName>Erainn-Andre Zamore</fullName>
                </value>
                <value>
                    <fullName>Gina DeFiore</fullName>
                </value>
                <value>
                    <fullName>Griffin Jon</fullName>
                </value>
                <value>
                    <fullName>Groh Connie</fullName>
                </value>
                <value>
                    <fullName>Hayley Woodall</fullName>
                </value>
                <value>
                    <fullName>Herosian Megan</fullName>
                </value>
                <value>
                    <fullName>Hugo Velasquez</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Names_of_Cvent_Staff__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Names of Cvent Staff</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Alliance_OA_360_Projects1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Onboarding_Old__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Onboarding Old</label>
        <referenceTo>Onboarding__c</referenceTo>
        <relationshipLabel>Onsite Solutions Projects</relationshipLabel>
        <relationshipName>Onsite_Solutions_Projects</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Onsite_Notes__c</fullName>
        <label>Onsite Notes</label>
        <length>4000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Onsite_Rep_Role__c</fullName>
        <label>Onsite Rep Role</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Contractor</fullName>
                </value>
                <value>
                    <fullName>Enterprise Analyst</fullName>
                </value>
                <value>
                    <fullName>Enterprise Mobile Program Specialist</fullName>
                </value>
                <value>
                    <fullName>Mobile Solutions Specialist</fullName>
                </value>
                <value>
                    <fullName>Program Manager </fullName>
                </value>
                <value>
                    <fullName>Project Coordinator</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Onsite_Request_Ends_Date__c</fullName>
        <label>Onsite Request Ends Date </label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Onsite_Request_Start_Date__c</fullName>
        <label>Onsite Request Start Date</label>
        <type>Date</type>
    </fields>
</CustomObject>